--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -572,7 +572,7 @@ CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_MEMORY_DUMP=y
 # CONFIG_MSM_DLOAD_MODE is not set
-CONFIG_MSM_JTAG=y
+# CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
 CONFIG_MSM_RUN_QUEUE_STATS=y
@@ -595,7 +595,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_OCMEM_DEBUG=y
+# CONFIG_MSM_OCMEM_DEBUG is not set
 # CONFIG_MSM_OCMEM_NONSECURE is not set
 # CONFIG_MSM_OCMEM_POWER_DEBUG is not set
 # CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
@@ -604,7 +604,7 @@ CONFIG_SENSORS_ADSP=y
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_RTB_SEPARATE_CPUS is not set
 # CONFIG_MSM_EBI_ERP is not set
-CONFIG_MSM_CACHE_ERP=y
+# CONFIG_MSM_CACHE_ERP is not set
 CONFIG_MSM_L1_ERR_PANIC=y
 # CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
 CONFIG_MSM_L1_ERR_LOG=y
@@ -615,8 +615,8 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_DCVS is not set
 # CONFIG_MSM_CPR is not set
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
-CONFIG_MSM_CACHE_DUMP=y
-CONFIG_MSM_CACHE_DUMP_ON_PANIC=y
+# CONFIG_MSM_CACHE_DUMP is not set
+# CONFIG_MSM_CACHE_DUMP_ON_PANIC is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
@@ -2633,8 +2633,8 @@ CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
-# CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
-# CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
+CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL=y
+CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP=y
 # CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
 CONFIG_MSM_KGSL_2D=y
 CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
@@ -3674,7 +3674,7 @@ CONFIG_DEBUG_KERNEL=y
 CONFIG_SCHED_DEBUG=y
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
-CONFIG_TIMER_STATS=y
+# CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
