--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -505,7 +505,7 @@ CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
-CONFIG_MSM_RESET_MODEM=m
+CONFIG_MSM_RESET_MODEM=y
 CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_IPC_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
@@ -527,7 +527,7 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-CONFIG_MSM_DMA_TEST=m
+CONFIG_MSM_DMA_TEST=y
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
@@ -556,7 +556,7 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_GSS is not set
 # CONFIG_MSM_PIL_PRONTO is not set
 CONFIG_MSM_SCM=y
-CONFIG_MSM_BUSPM_DEV=m
+CONFIG_MSM_BUSPM_DEV=y
 # CONFIG_MSM_TZ_LOG is not set
 # CONFIG_MSM_RPM_LOG is not set
 # CONFIG_MSM_RPM_STATS_LOG is not set
@@ -1501,7 +1501,7 @@ CONFIG_SCSI_MULTI_LUN=y
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
-CONFIG_SCSI_WAIT_SCAN=m
+CONFIG_SCSI_WAIT_SCAN=y
 
 #
 # SCSI Transports
@@ -1935,7 +1935,7 @@ CONFIG_HW_RANDOM_MSM=y
 # CONFIG_RAMOOPS is not set
 # CONFIG_LGE_DDM_TTY is not set
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
@@ -1994,7 +1994,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
@@ -2547,7 +2547,7 @@ CONFIG_VIDEO_IR_I2C=y
 CONFIG_V4L_USB_DRIVERS=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=m
+CONFIG_USB_GSPCA=y
 # CONFIG_USB_M5602 is not set
 # CONFIG_USB_STV06XX is not set
 # CONFIG_USB_GL860 is not set
@@ -3182,7 +3182,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_BOUNCE is not set
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
+CONFIG_MMC_TEST=y
 CONFIG_MMC_BLOCK_TEST=y
 # CONFIG_LGE_MMC_SEND_HPI_SANITIZE_TIMEOUT is not set
 # CONFIG_MMC_FFU is not set
@@ -3468,9 +3468,9 @@ CONFIG_DEVFREQ_GOV_MSM_CPUBW_HWMON=y
 # DEVFREQ Drivers
 #
 # CONFIG_LGE_DEVFREQ_DFPS is not set
-CONFIG_MOBICORE_SUPPORT=m
+CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
-CONFIG_MOBICORE_API=m
+CONFIG_MOBICORE_API=y
 CONFIG_CORESIGHT=y
 CONFIG_HAVE_CORESIGHT_SINK=y
 CONFIG_CORESIGHT_FUSE=y
@@ -3491,7 +3491,7 @@ CONFIG_CORESIGHT_ETM_PCSAVE_DEFAULT_ENABLE=y
 # CONFIG_CORESIGHT_MODEM_ETM is not set
 # CONFIG_CORESIGHT_WCN_ETM is not set
 # CONFIG_CORESIGHT_RPM_ETM is not set
-CONFIG_CORESIGHT_EVENT=m
+CONFIG_CORESIGHT_EVENT=y
 
 #
 # LGE Broadcast Device Support
@@ -3806,7 +3806,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=m
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
@@ -3894,7 +3894,7 @@ CONFIG_CRYPTO_DEFLATE=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=m
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
