--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -227,6 +227,8 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
