--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -224,10 +224,12 @@ CONFIG_EFI_PARTITION=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
+CONFIG_IOSCHED_TEST=n
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
