d802_defconfig: Enable Intelliactive GOV

--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -805,6 +805,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX2=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 # CONFIG_LGE_LOW_BATT_LIMIT is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
