--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -577,6 +577,7 @@ CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_MEMORY_DUMP=y
+CONFIG_HAS_MACH_MEMUTILS=y
 # CONFIG_MSM_DLOAD_MODE is not set
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
