--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -224,6 +224,8 @@ CONFIG_EFI_PARTITION=y
 #
 # IO Schedulers
 #
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=n
 CONFIG_IOSCHED_DEADLINE=y
@@ -233,11 +235,11 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
-# CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_ROW=y
+CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
