--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -817,6 +817,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
+CONFIG_CPU_FREQ_GOV_UBERDEMAND=y
 # CONFIG_LGE_LOW_BATT_LIMIT is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
