--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -3631,6 +3631,9 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=n
+CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
