--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -430,3 +430,5 @@ obj-$(CONFIG_ARCH_MSM8974) += lge_moca_drv.o
 obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
 
 obj-$(CONFIG_MSM_HOTPLUG) += msm_hotplug.o
+
+obj-$(CONFIG_ALUCARD_HOTPLUG) += alucard_hotplug.o
