d802_defconfig: Setup Nightmare + BIC as defaults

--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -797,7 +797,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_UBERDEMAND=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
@@ -926,8 +926,8 @@ CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_HTCP=n
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_BIC=y
+CONFIG_DEFAULT_TCP_CONG="bic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
