--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-HealthyHoney-4.4"
+CONFIG_LOCALVERSION="-HealthyHoney-4.5"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -926,8 +926,8 @@ CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_HTCP=n
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_DEFAULT_BIC=y
-CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
