--- a/arch/arm/configs/cyanogenmod_d802_defconfig
+++ b/arch/arm/configs/cyanogenmod_d802_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-HealthyHoney-4.7"
+CONFIG_LOCALVERSION="-HealthyHoney-4.8"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -818,6 +818,7 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_FREQ_GOV_UBERDEMAND=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_LGE_LOW_BATT_LIMIT is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
